# mustage_test_task

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 816d6af3a400_remove_unique_constraint_on_telegram_.py  c25092c71055_add_expense_table.py
src/: api.py  bot.py  config.py  models.py
src/expenses/: crud.py  currency_parser.py  pydantic_models.py  router.py
src/telegram/: keyboards.py  router.py  utils.py  validators.py
