[tool.poetry]
name = "mustage-test-task"
version = "0.1.0"
description = ""
authors = ["Ivan <korneichuk.ik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.12"}
pydantic = "2.10"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
aiosqlite = "^0.21.0"
sqlalchemy = "^2.0.40"
curl-cffi = "^0.10.0"
bs4 = "^0.0.2"
lxml = "^5.3.1"
aiohttp = "^3.11.16"
aiogram = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
